// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> : matches snapshot 1`] = `
<button
  class="primo-Button"
  data-testid="test-button"
  type="button"
>
  Button text
</button>
`;

exports[`<Button /> : matches snapshot as an anchor 1`] = `
<a
  aria-disabled="false"
  class="primo-Button"
  data-testid="test-button"
  href="https://google.com"
>
  Button text
</a>
`;
